Copy endorsed dir over to IdP home and use it for command line tools
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2679 ab3bd59b-922f-494d-bb5f-6f0a3c29deca